--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: objective-c
-osx_image: xcode7.2
-xcode_sdk: iphonesimulator9.2
+osx_image: xcode7.3
+xcode_sdk: iphonesimulator9.3
 branches:
   only:
     - master
 script:
-  - set -o pipefail && xcodebuild -project Codemine.xcodeproj -scheme Codemine -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6S,OS=9.2' build test | xcpretty
+  - set -o pipefail && xcodebuild -project Codemine.xcodeproj -scheme Codemine -sdk iphonesimulator9.3 -destination 'platform=iOS Simulator,name=iPhone 6S,OS=9.3' build test | xcpretty
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
