--- a/.travis.yml
+++ b/.travis.yml
@@ -8,25 +8,20 @@ env:
   global:
   - PROJECT_NAME="Codemine.xcodeproj"
   - IOS_FRAMEWORK_SCHEME="Codemine"
-  #- OSX_FRAMEWORK_SCHEME="Serializable OSX"
-  #- TVOS_FRAMEWORK_SCHEME="Serializable tvOS"
-  #- WATCHOS_FRAMEWORK_SCHEME="Serializable watchOS"
+
   - IOS_SDK=iphonesimulator9.3
   - OSX_SDK=macosx10.11
   - TVOS_SDK=appletvsimulator9.2
   - WATCHOS_SDK=watchsimulator2.2
   matrix:
   - DESTINATION="OS=9.3,name=iPhone 6S Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES"
-  #- DESTINATION="arch=x86_64"                    SCHEME="$OSX_FRAMEWORK_SCHEME"     SDK="$OSX_SDK"     RUN_TESTS="YES"
-  #- DESTINATION="OS=9.2,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"    SDK="$TVOS_SDK"    RUN_TESTS="YES"
-  #- DESTINATION="OS=2.2,name=Apple Watch - 38mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME" SDK="$WATCHOS_SDK" RUN_TESTS="NO"
 
 script:
   - set -o pipefail
 
   # Build Framework in Debug and Run Tests if specified
   - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -project "$PROJECT_NAME" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty;
+      xcodebuild -project "$PROJECT_NAME" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug test | xcpretty;
     else
       xcodebuild -project "$PROJECT_NAME" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
     fi
