--- a/Codemine.xcodeproj/xcshareddata/xcschemes/Codemine-tvOS.xcscheme
+++ b/Codemine.xcodeproj/xcshareddata/xcschemes/Codemine-tvOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "01CD403D1D071BB50044887E"
-               BuildableName = "Codemine-tvOS.framework"
+               BuildableName = "Codemine.framework"
                BlueprintName = "Codemine-tvOS"
                ReferencedContainer = "container:Codemine.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "01CD403D1D071BB50044887E"
-            BuildableName = "Codemine-tvOS.framework"
+            BuildableName = "Codemine.framework"
             BlueprintName = "Codemine-tvOS"
             ReferencedContainer = "container:Codemine.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "01CD403D1D071BB50044887E"
-            BuildableName = "Codemine-tvOS.framework"
+            BuildableName = "Codemine.framework"
             BlueprintName = "Codemine-tvOS"
             ReferencedContainer = "container:Codemine.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "01CD403D1D071BB50044887E"
-            BuildableName = "Codemine-tvOS.framework"
+            BuildableName = "Codemine.framework"
             BlueprintName = "Codemine-tvOS"
             ReferencedContainer = "container:Codemine.xcodeproj">
          </BuildableReference>
